--- a/src/lib/theme/index.scss
+++ b/src/lib/theme/index.scss
@@ -1,3 +1,4 @@
+@import "./reset";
 @import './beer-font.css';
 @import "./beer.css";
 @import "beer-ui-overwrit";
@@ -237,165 +238,165 @@
 	--scrollbar-color: rgba(0, 0, 0, 0.1);
 }
 
-:host[theme-mode='dark'],
-:root[theme-mode='dark'] {
-	--bg-color-demo: #303030;
-	--theme-block-light-display: none;
-	--theme-block-dark-display: block;
-	--header-box-shadow: inset 0 -1px 0 #4b4b4b;
-	--footer-box-shadow: inset 0 1px 0 #4b4b4b;
-	--aside-box-shadow: inset -1px 0 0 #4b4b4b;
-	--popup-box-shadow: inset 1px 0px 0px #5e5e5e, inset -1px 0px 0px #5e5e5e,
-		inset 0px -1px 0px #5e5e5e, inset 0px 1px 0px #5e5e5e;
-	--table-box-shadow: inset 0px 1px 0px #4b4b4b, inset 0px -1px 0px #4b4b4b,
-		inset -1px 0px 0px #4b4b4b, inset 1px 0px 0px #4b4b4b;
-	--text-primary: hsla(0, 0%, 100%, 0.9);
-	--text-secondary: hsla(0, 0%, 100%, 0.55);
-	--text-placeholder: hsla(0, 0%, 100%, 0.35);
-	--text-disabled: hsla(0, 0%, 100%, 0.22);
-	--text-anti: #fff;
-	--text-interactive: #4582e6;
-	--brand-main: #4582e6;
-	--brand-main-hover: #2667d4;
-	--brand-main-focus: #173463;
-	--brand-main-disabled: #143975;
-	--brand-main-light: rgba(69, 130, 230, 0.2);
-	--error-1: #472324;
-	--error-8: #ec888e;
-	--error-main: #c64751;
-	--error-main-hover: #a03f46;
-	--error-main-disabled: #951114;
-	--warning-main: #cf6e2d;
-	--warning-main-hover: #a75d2b;
-	--warning-main-disabled: #733c23;
-	--success-main: #059465;
-	--success-main-hover: #0d7a55;
-	--success-main-disabled: rgba(0, 168, 112, 0.25);
-	--success-main-light: rgba(0, 168, 112, 0.1);
-	--be-brand-color-1: #1b2f51;
-	--be-brand-color-2: #173463;
-	--be-brand-color-3: #143975;
-	--be-brand-color-4: #103d88;
-	--be-brand-color-5: #0d429a;
-	--be-brand-color-6: #054bbe;
-	--be-brand-color-7: #2667d4;
-	--be-brand-color-8: #4582e6;
-	--be-brand-color-9: #699ef5;
-	--be-brand-color-10: #96bbf8;
-	--be-warning-color-1: #4f2a1d;
-	--be-warning-color-2: #582f21;
-	--be-warning-color-3: #733c23;
-	--be-warning-color-4: #a75d2b;
-	--be-warning-color-5: #cf6e2d;
-	--be-warning-color-6: #dc7633;
-	--be-warning-color-7: #e8935c;
-	--be-warning-color-8: #ecbf91;
-	--be-warning-color-9: #eed7bf;
-	--be-warning-color-10: #f3e9dc;
-	--be-error-color-1: #472324;
-	--be-error-color-2: #5e2a2d;
-	--be-error-color-3: #703439;
-	--be-error-color-4: #83383e;
-	--be-error-color-5: #a03f46;
-	--be-error-color-6: #c64751;
-	--be-error-color-7: #de6670;
-	--be-error-color-8: #ec888e;
-	--be-error-color-9: #edb1b6;
-	--be-error-color-10: #eeced0;
-	--be-success-color-1: #193a2a;
-	--be-success-color-2: #1a4230;
-	--be-success-color-3: #17533d;
-	--be-success-color-4: #0d7a55;
-	--be-success-color-5: #059465;
-	--be-success-color-6: #43af8a;
-	--be-success-color-7: #46bf96;
-	--be-success-color-8: #80d2b6;
-	--be-success-color-9: #b4e1d3;
-	--be-success-color-10: #deede8;
-	--be-gray-color-1: #f3f3f3;
-	--be-gray-color-2: #eee;
-	--be-gray-color-3: #e7e7e7;
-	--be-gray-color-4: #dcdcdc;
-	--be-gray-color-5: #c5c5c5;
-	--be-gray-color-6: #a6a6a6;
-	--be-gray-color-7: #8b8b8b;
-	--be-gray-color-8: #777;
-	--be-gray-color-9: #5e5e5e;
-	--be-gray-color-10: #4b4b4b;
-	--be-gray-color-11: #383838;
-	--be-gray-color-12: #2c2c2c;
-	--be-gray-color-13: #242424;
-	--be-gray-color-14: #181818;
-	--be-font-white-1: hsla(0, 0%, 100%, 0.9);
-	--be-font-white-2: hsla(0, 0%, 100%, 0.55);
-	--be-font-white-3: hsla(0, 0%, 100%, 0.35);
-	--be-font-white-4: hsla(0, 0%, 100%, 0.22);
-	--be-font-gray-1: rgba(0, 0, 0, 0.9);
-	--be-font-gray-2: rgba(0, 0, 0, 0.6);
-	--be-font-gray-3: rgba(0, 0, 0, 0.4);
-	--be-font-gray-4: rgba(0, 0, 0, 0.26);
-	--be-brand-color: var(--be-brand-color-8);
-	--be-warning-color: var(--be-warning-color-5);
-	--be-error-color: var(--be-error-color-6);
-	--be-success-color: var(--be-success-color-5);
-	--be-brand-color-hover: var(--be-brand-color-7);
-	--be-brand-color-focus: var(--be-brand-color-2);
-	--be-brand-color-active: var(--be-brand-color-9);
-	--be-brand-color-disabled: var(--be-brand-color-3);
-	--be-brand-color-light: var(--be-brand-color-1);
-	--be-warning-color-hover: var(--be-warning-color-4);
-	--be-warning-color-focus: var(--be-warning-color-2);
-	--be-warning-color-active: var(--be-warning-color-6);
-	--be-warning-color-disabled: var(--be-warning-color-3);
-	--be-warning-color-light: var(--be-warning-color-1);
-	--be-error-color-hover: var(--be-error-color-5);
-	--be-error-color-focus: var(--be-error-color-2);
-	--be-error-color-active: var(--be-error-color-7);
-	--be-error-color-disabled: var(--be-error-color-3);
-	--be-error-color-light: var(--be-error-color-1);
-	--be-success-color-hover: var(--be-success-color-4);
-	--be-success-color-focus: var(--be-success-color-2);
-	--be-success-color-active: var(--be-success-color-6);
-	--be-success-color-disabled: var(--be-success-color-3);
-	--be-success-color-light: var(--be-success-color-1);
-	--be-mask-active: rgba(0, 0, 0, 0.4);
-	--be-mask-disabled: rgba(0, 0, 0, 0.6);
-	--bg-color-page: var(--be-gray-color-14);
-	--bg-color-code: #9f9f9f;
-	--bg-color-container: var(--be-gray-color-13);
-	--bg-color-container-hover: var(--be-gray-color-12);
-	--bg-color-container-active: var(--be-gray-color-10);
-	--bg-color-container-select: var(--be-gray-color-9);
-	--bg-color-secondarycontainer: var(--be-gray-color-12);
-	--bg-color-secondarycontainer-hover: var(--be-gray-color-11);
-	--bg-color-secondarycontainer-active: var(--be-gray-color-9);
-	--bg-color-component: var(--be-gray-color-11);
-	--bg-color-footer: var(--be-gray-color-11);
-	--bg-color-component-hover: var(--be-gray-color-10);
-	--bg-color-component-active: var(--be-gray-color-9);
-	--bg-color-component-disabled: var(--be-gray-color-12);
-	--bg-color-specialcomponent: transparent;
-	--text-color-primary: var(--be-font-white-1);
-	--text-color-secondary: var(--be-font-white-2);
-	--text-color-placeholder: var(--be-font-white-3);
-	--text-color-disabled: var(--be-font-white-4);
-	--text-color-anti: #fff;
-	--text-color-brand: var(--be-brand-color-8);
-	--text-color-link: var(--be-brand-color-8);
-	--border-level-1-color: var(--be-gray-color-11);
-	--component-stroke: var(--be-gray-color-11);
-	--border-level-2-color: var(--be-gray-color-9);
-	--component-border: var(--be-gray-color-9);
-	--shadow-1: 0 4px 6px rgba(0, 0, 0, 0.06), 0 1px 10px rgba(0, 0, 0, 0.08),
-		0 2px 4px rgba(0, 0, 0, 0.12);
-	--shadow-2: 0 8px 10px rgba(0, 0, 0, 0.12), 0 3px 14px rgba(0, 0, 0, 0.1),
-		0 5px 5px rgba(0, 0, 0, 0.16);
-	--shadow-3: 0 16px 24px rgba(0, 0, 0, 0.14), 0 6px 30px rgba(0, 0, 0, 0.12),
-		0 8px 10px rgba(0, 0, 0, 0.2);
-	--shadow-inset-top: inset 0 0.5px 0 #5e5e5e;
-	--shadow-inset-right: inset 0.5px 0 0 #5e5e5e;
-	--shadow-inset-bottom: inset 0 -0.5px 0 #5e5e5e;
-	--shadow-inset-left: inset -0.5px 0 0 #5e5e5e;
-	--table-shadow-color: rgba(0, 0, 0, 0.55);
-	--scrollbar-color: hsla(0, 0%, 100%, 0.1);
-}
+//:host[theme-mode='dark'],
+//:root[theme-mode='dark'] {
+//	--bg-color-demo: #303030;
+//	--theme-block-light-display: none;
+//	--theme-block-dark-display: block;
+//	--header-box-shadow: inset 0 -1px 0 #4b4b4b;
+//	--footer-box-shadow: inset 0 1px 0 #4b4b4b;
+//	--aside-box-shadow: inset -1px 0 0 #4b4b4b;
+//	--popup-box-shadow: inset 1px 0px 0px #5e5e5e, inset -1px 0px 0px #5e5e5e,
+//		inset 0px -1px 0px #5e5e5e, inset 0px 1px 0px #5e5e5e;
+//	--table-box-shadow: inset 0px 1px 0px #4b4b4b, inset 0px -1px 0px #4b4b4b,
+//		inset -1px 0px 0px #4b4b4b, inset 1px 0px 0px #4b4b4b;
+//	--text-primary: hsla(0, 0%, 100%, 0.9);
+//	--text-secondary: hsla(0, 0%, 100%, 0.55);
+//	--text-placeholder: hsla(0, 0%, 100%, 0.35);
+//	--text-disabled: hsla(0, 0%, 100%, 0.22);
+//	--text-anti: #fff;
+//	--text-interactive: #4582e6;
+//	--brand-main: #4582e6;
+//	--brand-main-hover: #2667d4;
+//	--brand-main-focus: #173463;
+//	--brand-main-disabled: #143975;
+//	--brand-main-light: rgba(69, 130, 230, 0.2);
+//	--error-1: #472324;
+//	--error-8: #ec888e;
+//	--error-main: #c64751;
+//	--error-main-hover: #a03f46;
+//	--error-main-disabled: #951114;
+//	--warning-main: #cf6e2d;
+//	--warning-main-hover: #a75d2b;
+//	--warning-main-disabled: #733c23;
+//	--success-main: #059465;
+//	--success-main-hover: #0d7a55;
+//	--success-main-disabled: rgba(0, 168, 112, 0.25);
+//	--success-main-light: rgba(0, 168, 112, 0.1);
+//	--be-brand-color-1: #1b2f51;
+//	--be-brand-color-2: #173463;
+//	--be-brand-color-3: #143975;
+//	--be-brand-color-4: #103d88;
+//	--be-brand-color-5: #0d429a;
+//	--be-brand-color-6: #054bbe;
+//	--be-brand-color-7: #2667d4;
+//	--be-brand-color-8: #4582e6;
+//	--be-brand-color-9: #699ef5;
+//	--be-brand-color-10: #96bbf8;
+//	--be-warning-color-1: #4f2a1d;
+//	--be-warning-color-2: #582f21;
+//	--be-warning-color-3: #733c23;
+//	--be-warning-color-4: #a75d2b;
+//	--be-warning-color-5: #cf6e2d;
+//	--be-warning-color-6: #dc7633;
+//	--be-warning-color-7: #e8935c;
+//	--be-warning-color-8: #ecbf91;
+//	--be-warning-color-9: #eed7bf;
+//	--be-warning-color-10: #f3e9dc;
+//	--be-error-color-1: #472324;
+//	--be-error-color-2: #5e2a2d;
+//	--be-error-color-3: #703439;
+//	--be-error-color-4: #83383e;
+//	--be-error-color-5: #a03f46;
+//	--be-error-color-6: #c64751;
+//	--be-error-color-7: #de6670;
+//	--be-error-color-8: #ec888e;
+//	--be-error-color-9: #edb1b6;
+//	--be-error-color-10: #eeced0;
+//	--be-success-color-1: #193a2a;
+//	--be-success-color-2: #1a4230;
+//	--be-success-color-3: #17533d;
+//	--be-success-color-4: #0d7a55;
+//	--be-success-color-5: #059465;
+//	--be-success-color-6: #43af8a;
+//	--be-success-color-7: #46bf96;
+//	--be-success-color-8: #80d2b6;
+//	--be-success-color-9: #b4e1d3;
+//	--be-success-color-10: #deede8;
+//	--be-gray-color-1: #f3f3f3;
+//	--be-gray-color-2: #eee;
+//	--be-gray-color-3: #e7e7e7;
+//	--be-gray-color-4: #dcdcdc;
+//	--be-gray-color-5: #c5c5c5;
+//	--be-gray-color-6: #a6a6a6;
+//	--be-gray-color-7: #8b8b8b;
+//	--be-gray-color-8: #777;
+//	--be-gray-color-9: #5e5e5e;
+//	--be-gray-color-10: #4b4b4b;
+//	--be-gray-color-11: #383838;
+//	--be-gray-color-12: #2c2c2c;
+//	--be-gray-color-13: #242424;
+//	--be-gray-color-14: #181818;
+//	--be-font-white-1: hsla(0, 0%, 100%, 0.9);
+//	--be-font-white-2: hsla(0, 0%, 100%, 0.55);
+//	--be-font-white-3: hsla(0, 0%, 100%, 0.35);
+//	--be-font-white-4: hsla(0, 0%, 100%, 0.22);
+//	--be-font-gray-1: rgba(0, 0, 0, 0.9);
+//	--be-font-gray-2: rgba(0, 0, 0, 0.6);
+//	--be-font-gray-3: rgba(0, 0, 0, 0.4);
+//	--be-font-gray-4: rgba(0, 0, 0, 0.26);
+//	--be-brand-color: var(--be-brand-color-8);
+//	--be-warning-color: var(--be-warning-color-5);
+//	--be-error-color: var(--be-error-color-6);
+//	--be-success-color: var(--be-success-color-5);
+//	--be-brand-color-hover: var(--be-brand-color-7);
+//	--be-brand-color-focus: var(--be-brand-color-2);
+//	--be-brand-color-active: var(--be-brand-color-9);
+//	--be-brand-color-disabled: var(--be-brand-color-3);
+//	--be-brand-color-light: var(--be-brand-color-1);
+//	--be-warning-color-hover: var(--be-warning-color-4);
+//	--be-warning-color-focus: var(--be-warning-color-2);
+//	--be-warning-color-active: var(--be-warning-color-6);
+//	--be-warning-color-disabled: var(--be-warning-color-3);
+//	--be-warning-color-light: var(--be-warning-color-1);
+//	--be-error-color-hover: var(--be-error-color-5);
+//	--be-error-color-focus: var(--be-error-color-2);
+//	--be-error-color-active: var(--be-error-color-7);
+//	--be-error-color-disabled: var(--be-error-color-3);
+//	--be-error-color-light: var(--be-error-color-1);
+//	--be-success-color-hover: var(--be-success-color-4);
+//	--be-success-color-focus: var(--be-success-color-2);
+//	--be-success-color-active: var(--be-success-color-6);
+//	--be-success-color-disabled: var(--be-success-color-3);
+//	--be-success-color-light: var(--be-success-color-1);
+//	--be-mask-active: rgba(0, 0, 0, 0.4);
+//	--be-mask-disabled: rgba(0, 0, 0, 0.6);
+//	--bg-color-page: var(--be-gray-color-14);
+//	--bg-color-code: #9f9f9f;
+//	--bg-color-container: var(--be-gray-color-13);
+//	--bg-color-container-hover: var(--be-gray-color-12);
+//	--bg-color-container-active: var(--be-gray-color-10);
+//	--bg-color-container-select: var(--be-gray-color-9);
+//	--bg-color-secondarycontainer: var(--be-gray-color-12);
+//	--bg-color-secondarycontainer-hover: var(--be-gray-color-11);
+//	--bg-color-secondarycontainer-active: var(--be-gray-color-9);
+//	--bg-color-component: var(--be-gray-color-11);
+//	--bg-color-footer: var(--be-gray-color-11);
+//	--bg-color-component-hover: var(--be-gray-color-10);
+//	--bg-color-component-active: var(--be-gray-color-9);
+//	--bg-color-component-disabled: var(--be-gray-color-12);
+//	--bg-color-specialcomponent: transparent;
+//	--text-color-primary: var(--be-font-white-1);
+//	--text-color-secondary: var(--be-font-white-2);
+//	--text-color-placeholder: var(--be-font-white-3);
+//	--text-color-disabled: var(--be-font-white-4);
+//	--text-color-anti: #fff;
+//	--text-color-brand: var(--be-brand-color-8);
+//	--text-color-link: var(--be-brand-color-8);
+//	--border-level-1-color: var(--be-gray-color-11);
+//	--component-stroke: var(--be-gray-color-11);
+//	--border-level-2-color: var(--be-gray-color-9);
+//	--component-border: var(--be-gray-color-9);
+//	--shadow-1: 0 4px 6px rgba(0, 0, 0, 0.06), 0 1px 10px rgba(0, 0, 0, 0.08),
+//		0 2px 4px rgba(0, 0, 0, 0.12);
+//	--shadow-2: 0 8px 10px rgba(0, 0, 0, 0.12), 0 3px 14px rgba(0, 0, 0, 0.1),
+//		0 5px 5px rgba(0, 0, 0, 0.16);
+//	--shadow-3: 0 16px 24px rgba(0, 0, 0, 0.14), 0 6px 30px rgba(0, 0, 0, 0.12),
+//		0 8px 10px rgba(0, 0, 0, 0.2);
+//	--shadow-inset-top: inset 0 0.5px 0 #5e5e5e;
+//	--shadow-inset-right: inset 0.5px 0 0 #5e5e5e;
+//	--shadow-inset-bottom: inset 0 -0.5px 0 #5e5e5e;
+//	--shadow-inset-left: inset -0.5px 0 0 #5e5e5e;
+//	--table-shadow-color: rgba(0, 0, 0, 0.55);
+//	--scrollbar-color: hsla(0, 0%, 100%, 0.1);
+//}
