--- a/src/lib/ui/beui/styles/beer-ui-overwrit.scss
+++ b/src/lib/ui/beui/styles/beer-ui-overwrit.scss
@@ -125,55 +125,11 @@
   margin: 0;
 }
 
-///**
-//  下拉框在body下面
-// */
-//.be-select__option {
-//  background-color: #fff;
-//  border: 1px solid #e4e7ed;
-//  border-radius: 4px;
-//  box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
-//  box-sizing: border-box;
-//  left: 0;
-//  margin: 8px 0;
-//  opacity: 0;
-//  padding: 6px 0;
-//  position: relative;
-//  transform: scaleY(0);
-//  transform-origin: center top;
-//  transition: 0.3s;
-//  user-select: none;
-//  width: 100%;
-//  z-index: 1000;
-//}
-//
-//.be-select__option.is-ready {
-//  display: block;
-//}
-//
-//.be-select__option_content {
-//  margin: 0;
-//  max-height: 300px;
-//  overflow: auto;
-//  padding: 0;
-//}
-//
-//.be-select__option.visible {
-//  opacity: 1;
-//  transform: scaleY(1);
-//}
-//
-//.be-select__option::-webkit-scrollbar {
-//  width: 0;
-//}
-//
-//.be-select__option::-webkit-scrollbar-track {
-//  border-radius: 6px;
-//  -webkit-box-shadow: inset006pxrgba(0, 0, 0, 0.3);
-//}
-//
-//.be-select__option::-webkit-scrollbar-thumb {
-//  background: rgba(0, 0, 0, 0.1);
-//  border-radius: 6px;
-//  -webkit-box-shadow: inset006pxrgba(0, 0, 0, 0.5);
-//}
+.be-date-picker {
+  position: relative;
+  top: 0;
+}
+
+.be-range-daterange-picker {
+  display: flex;
+}
