--- a/src/lib/ui/beui/styles/beer-ui-overwrit.scss
+++ b/src/lib/ui/beui/styles/beer-ui-overwrit.scss
@@ -33,7 +33,7 @@
 }
 
 .be-range-separator {
-  //line-height: 36px;
+  width: auto;
 }
 
 .be-select .be-icon-chevron-down {
@@ -128,6 +128,9 @@
 .be-date-picker {
   position: relative;
   top: 0;
+  margin: 0;
+  box-shadow: none;
+  border: none;
 }
 
 .be-range-daterange-picker {
