--- a/src/lib/ui/beui/styles/beer-ui-overwrit.scss
+++ b/src/lib/ui/beui/styles/beer-ui-overwrit.scss
@@ -136,3 +136,11 @@
   display: flex;
 }
 
+.be-input__icon.be-icon.be-icon-close-circle {
+  padding-right: 3px;
+  padding-top: 2px;
+}
+
+.be-date .be-icon.be-icon-close-circle {
+  font-size: 14px;
+}
