--- a/src/lib/ui/beui/styles/tippy-overwrite.scss
+++ b/src/lib/ui/beui/styles/tippy-overwrite.scss
@@ -3,5 +3,5 @@
 }
 
 .be-tippy-popover-custom-class .tippy-box[data-placement] > .tippy-arrow {
-  transform: translate3d(30px, 0px, 0px) !important;
+  //transform: translate3d(30px, 0px, 0px) !important;
 }
